# model

./: .travis.yml  CHANGELOG  README.md  model.cabal  stack.yaml
src/: README.lhs
src/Data/: Model.hs
src/Data/Convertible/: Tiny.hs
src/Data/Model/: Class.hs  Env.hs  Instances.hs  Pretty.hs  Types.hs  Util.hs
src/Type/: ANat.hs  Analyse.hs
test/: DocSpec.hs  Info.hs  Spec.hs
test/Test/Data/: Model.hs
