name:                model
version:             0.1.1
synopsis:            Derive a model of a data type using Generics
description:         Please see README.md
homepage:            http://github.com/tittoassini/model
license:             BSD3
license-file:        LICENSE
author:              Pasqualino `Titto` Assini
maintainer:          tittoassini@gmail.com
copyright:           Copyright: (c) 2015 Pasqualino `Titto` Assini
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Model,Data.Model.Class,Data.Model.Instances,Data.Model.Pretty,Data.Model.Types,Type.ANat,Type.Analyse
  build-depends:       base >= 4.7 && < 5, deepseq >= 1.4, pretty >= 1.1.2.0, text, transformers >= 0.4
  default-language:    Haskell2010

test-suite model-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules: Test.Data,Test.Data2,Test.Data3,Test.Data.Model
  build-depends:       base
                     , ghc-prim >= 0.4.0.0
                     , model
                     , tasty >= 0.11.0.2
                     , tasty-hunit
                     , tasty-hunit >= 0.9.2
                     , tasty-quickcheck
                     , tasty-quickcheck >= 0.8.4,text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tittoassini/model
