name:                model
version:             0.2.3
synopsis:            Derive a model of a data type using Generics
description:         See the <http://github.com/tittoassini/model online tutorial>
homepage:            http://github.com/tittoassini/model
license:             BSD3
license-file:        LICENSE
author:              Pasqualino `Titto` Assini
maintainer:          tittoassini@gmail.com
copyright:           Copyright: (c) 2016 Pasqualino `Titto` Assini
category:            Data,Reflection,Generics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files: stack.yaml
Tested-With: GHC == 7.10.3,GHC == 8.0.2

library
  hs-source-dirs:      src
  exposed-modules:     Data.Model,Data.Model.Class,Data.Model.Env,Data.Model.Instances,Data.Model.Pretty,Data.Model.Types,Data.Model.Util,Type.ANat,Type.Analyse
  build-depends:       base >= 4.7 && < 5, containers >= 0.5.6.2, deepseq >= 1.4, pretty >= 1.1.2.0, transformers >= 0.4 ,ListLike >= 4.2.1
  default-language:    Haskell2010
  ghc-options:  -Wall -fno-warn-orphans

test-suite model-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules: Test.Data,Test.Data2,Test.Data3,Test.Data.Model
  build-depends:       base >= 4.7 && < 5
                     , ghc-prim >= 0.4.0.0
                     , tasty >= 0.11.0.2
                     , tasty-hunit >= 0.9.2
                     , tasty-quickcheck >= 0.8.4
                     , pretty  >= 1.1.2.0
                     , containers >= 0.5.6.2
                     , model
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tittoassini/model
